--- a/Labs/L2_LogReg/L2_LogisticRegression.ipynb
+++ b/Labs/L2_LogReg/L2_LogisticRegression.ipynb
@@ -35,13 +35,19 @@
     "\n",
     "This can be understood as a **sequence of two steps**:\n",
     "\n",
-    "1. Compute a linear combination $z$ of the inputs:\n",
+    "1. Compute a **linear combination $z$** of the inputs:\n",
     "    $$z = w_1 x_1 + w_2 x_2 + ... + w_N x_N + b$$\n",
     "    \n",
-    "2. Pass $z$ through the sigmoid function $\\sigma(z)$:\n",
+    "2. Pass $z$ through the **sigmoid** function $\\sigma(z)$:\n",
     "    $$y = \\frac{1}{1 + e^{-z}}$$\n",
     "\n",
-    "TODO: make a drawing here of the computational graph."
+    "\n",
+    "![Logistic regression as 1 neuron](img/Neuron2.png)  \n",
+    "\n",
+    "Both steps can be represented asn one \"neuron\" like this:\n",
+    "\n",
+    "![Logistic regression as 1 neuron](img/Neuron.png)      \n",
+    "\n"
    ]
   },
   {
@@ -50,19 +56,21 @@
    "source": [
     "### The sigmoid function\n",
     "\n",
-    "Let's take a look at the sigmoid function $\\sigma(z)$:\n",
+    "Let's take a look at the sigmoid function $\\sigma{z}$:\n",
     "\n",
-    "TODO: put picture here\n",
+    "<div>\n",
+    "<img src=\"img/Sigmoid.svg\" align=\"center\" width=\"600\"/>\n",
+    "</div>\n",
     "\n",
     "**Notes**: \n",
     "\n",
     "- The output value is always between 0 and 1. This makes the result good for modeling **probabilities**, but not good for other types of numeric values.\n",
     "- The sigmoid can be understood as follows:\n",
-    "   - when $z$ is much bigger than 0, the result is close to 1\n",
-    "   - when $z$ is much smaller than 0, the result is close to 0\n",
+    "   - when $z$ is much bigger than 0, the result is practically 1\n",
+    "   - when $z$ is much smaller than 0, the result is practically 0\n",
     "   - when $z$ is around 0, there is a \"transition zone\" from 0 to 1. In particular, when $z=0$, the output is right at the middle, $\\sigma(0) = 0.5$.\n",
     "   \n",
-    "   This makes it similar to classification: if $z$ much larger than 0, data belongs to class 1; if $z$ much smaller than 0, data belongs to class 0; $z=0$ is the frontier. Around the frontier, we have less confidence in the classification (a sort of \"gray area\")."
+    "This makes it similar to classification: if $z$ much larger than 0, data belongs to class 1; if $z$ much smaller than 0, data belongs to class 0; $z=0$ is the frontier. Around the frontier, we have less confidence in the classification (a sort of \"gray area\")."
    ]
   },
   {
@@ -92,7 +100,7 @@
     "\n",
     "$$L(y, \\hat{y}) = - y \\log{\\hat{y}} - (1-y) \\log{(1 - \\hat{y})}$$\n",
     "\n",
-    "Most of the times, the true value $y$ is either 0 or 1 (e.g. in a  classification: 0 = cat, 1 = dog). In this case the cross-entropy should be understood as:\n",
+    "Usually the true value $y$ is either 0 or 1 (e.g. in a  classification: 0 = cat, 1 = dog). In this case the cross-entropy should be understood as:\n",
     "\n",
     "$$L(y, \\hat{y}) = \n",
     "\\begin{cases}\n",
@@ -101,22 +109,13 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "In both cases, the cose is 0 if $\\hat{y} = y$, and it is $\\infty$ when $\\hat{y}$ is exactly the opposite.\n",
+    "In both cases, the cost is 0 if $\\hat{y} = y$, and it is $\\infty$ when $\\hat{y}$ is exactly the opposite, as depicted below:\n",
+    "\n",
+    "![Cross-entropy loss when true class $y$ is either 0 or 1](img/CrossEntropy.png)\n",
     "\n",
     "When there are N input-output pairs, the overall cost is the average for all:\n",
     "\n",
     "$$J = \\frac{1}{N} \\sum_i L(y^i, \\hat{y}^i) = \\frac{1}{N} \\sum_i \\left(- y \\log{\\hat{y}} - (1-y) \\log{1 - \\hat{y}} \\right)$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Graphical representation as a neuron\n",
-    "\n",
-    "The logistic regression model can be represented graphically as a \"neuron\".\n",
-    "\n",
-    "TODO: put picture here"
    ]
   },
   {
