Done theoretical part of Lab 3

--- a/Labs/L3_MultilayerNetworks/L3_Multilayer.ipynb
+++ b/Labs/L3_MultilayerNetworks/L3_Multilayer.ipynb
@@ -35,12 +35,32 @@
     "  \n",
     "What if we have a dataset as follows? How to do classification here?\n",
     "\n",
+    "<div>\n",
+    "<img src=img/DatasetAngled1.png align=\"center\" width=\"200\"/>\n",
+    "</div>\n",
+    "\n",
+    "![How to separate the classes in this dataset? ]()\n",
+    "\n",
+    "\n",
     "Solution: use **two neurons**: \n",
     "  \n",
-    "  - each one draws a hyperplane\n",
+    "  - each one draws a hyperplane (a line)\n",
     "  - aggregate their results into the final outcome: \"When both neurons say 1, output class is 1. Otherwise, output class is 0\".\n",
     "\n",
-    "Combining the results of both neurons in the final result is **also done with a neuron**. Thus, we have **cascading neurons**.\n",
+    "\n",
+    "<div>\n",
+    "<img src=img/DatasetAngled2.png align=\"center\" width=\"400\"/>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "Combining the results of both neurons in the final result is **also done with a (third) neuron**. Thus, we have **cascading neurons**.\n",
+    "\n",
+    "\n",
+    "<div>\n",
+    "<img src=img/Network2plus1.png align=\"center\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "Neurons operating on the same inputs form a **layer**. We have two layers now:\n",
     "\n",
@@ -48,11 +68,14 @@
     "- The hidden layer (middle)\n",
     "- The output layer (the output neuron)\n",
     "\n",
-    "What if we want a boundary composed of 3 sides? Use three neurons in he hidden layer.\n",
+    "What if we want a boundary composed of 3 sides? Use three neurons in the hidden layer.\n",
     "\n",
     "What if we want a curved boundary? Use many more neurons (approximate the curve from many lines)\n",
     "\n",
-    "**Any hypersurface** can be obtained with just two layers, provided there are enough neurons in the hidden layer.\n",
+    "**Any hypersurface** can be obtained with just two layers, provided there are enough neurons in the hidden layer:\n",
+    "\n",
+    "  1. The hidden layer draws some hyperplanes (e.g. lines)\n",
+    "  2. The output layer combines the results into output values\n",
     "\n",
     "#### Multiple outputs\n",
     "\n",
@@ -181,7 +204,7 @@
     "\n",
     "Training is done with **backpropagation** and gradient descent (or some variant of it).\n",
     "\n",
-    "**Backpropagation** = the technique to compute the derivatives of $J$ with respect to all parameters in the network.\n",
+    "**Backpropagation** = the technique to compute the derivatives of $J$  with respect to all parameters in the network.\n",
     "\n",
     "#### Backpropagation\n",
     "\n",
