Add Lab 3 (Multilayer networks)

--- a/Labs/L3_MultilayerNetworks/L3_Multilayer.ipynb
+++ b/Labs/L3_MultilayerNetworks/L3_Multilayer.ipynb
@@ -278,14 +278,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example (walkthrough)\n",
+    "# 3. Practical work\n",
+    "\n",
+    "## 3.1 Toy Example (walkthrough)\n",
     "\n",
     "Let's do a sample classification.\n",
     "\n",
-    "Load the `wine_dataset` in Matlab and inspect the data:\n",
+    "We shall work with the same `wine_dataset` data as in the previous labs. The last column gives the quality score. We shall treat the quality score as a **class indicator**. We shall perform classification with a multilayer network model, aiming to classify correctly the quality of a wine based on its parameters.\n",
+    "\n",
+    "Load the `wine_dataset` in Matlab, and consider the following:\n",
     "\n",
     "- how many inputs are there?\n",
-    "- how many output categories?"
+    "- how many output categories?\n",
+    "- how does the architecture of a 2-layer network for classifying this dataset look like?"
    ]
   },
   {
@@ -293,146 +298,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "load wine_dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Start the `nprtool()` or the `nnstart()` and run training.\n",
-    "\n",
-    "FInally, do some predictions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Practical work\n",
-    "\n",
-    "We use the same data as in linear regression, but instead we try to predict if one of the two possibilities: the quality score is <=5 (class 0) or the quality score is > 5 (class 1).\n",
-    "\n",
-    "As a reminder, the data comes from here: https://www.kaggle.com/uciml/red-wine-quality-cortez-et-al-2009, and contains 11 numerical chemical measurements for some different brands of red wines, together with a quality score indicated by buyers (quality goes from 3 to 8).\n",
-    "\n",
-    "Inputs:\n",
-    "\n",
-    "   - 1 - fixed acidity\n",
-    "   - 2 - volatile acidity\n",
-    "   - 3 - citric acid\n",
-    "   - 4 - residual sugar\n",
-    "   - 5 - chlorides\n",
-    "   - 6 - free sulfur dioxide\n",
-    "   - 7 - total sulfur dioxide\n",
-    "   - 8 - density\n",
-    "   - 9 - pH\n",
-    "   - 10 - sulphates\n",
-    "   - 11 - alcohol \n",
-    "   \n",
-    "Outputs:\n",
-    "\n",
-    "   - 12 - quality\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's load the data first "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "Data = readmatrix('winequality-red.csv');\n",
     "X = Data(:,1:11);       % 11 columns for the inputs\n",
     "N = size(Data,1);       % The number of wines in the set (1599)\n",
     "\n",
-    "Y = Data(:,12) > 5;     % make 1 column for the output: 1 if score > 5, 0 if score <= 5"
+    "Y = Data(:,12) ;        % 12th column the quality"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extend the X matrix so we can treat the bias $b$ as just another weight."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = [X ones(N,1)];"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's initialize the weights to some random values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "W =\n",
-      "\n",
-      "    2.7694\n",
-      "   -1.3499\n",
-      "    3.0349\n",
-      "    0.7254\n",
-      "   -0.0631\n",
-      "    0.7147\n",
-      "   -0.2050\n",
-      "   -0.1241\n",
-      "    1.4897\n",
-      "    1.4090\n",
-      "    1.4172\n",
-      "    0.6715\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "W = randn(12, 1)   % a column vector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Task 1**: Compute and show the cost function with the above weights"
+    "Let's do **one hot encoding** of the output vector Y. In R2020b we can use the function `onehotencode()`. \n",
+    "In previous versions, we can use the function `ind2vec()`."
    ]
   },
   {
@@ -441,19 +320,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%======================\n",
-    "% Your code here\n",
-    "%======================"
+    "Yenc = full(ind2vec(Y'))\n",
+    "% Since our data starts from value 3, we shall remove the first two lines. Thus quality 3 = class 1, quality 4 = class 2, etc.\n",
+    "Yenc = Yenc(3:end, :)' % Remove first two lines\n",
+    "Yenc = Yenc';          % Transpose, so each value corresponds to a row, just like the input data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 2**: Implement optimization with Gradient Descent\n",
+    "Start the `nprtool()` or the `nnstart()`.\n",
     "\n",
-    "You can implement a visualizaiton just like in the example provided, by copying and adapting the code.\n",
-    "You cannot plot all the 11 dimensions of the input data, so pick only two of them to plot."
+    "1. Select the input and output data.\n",
+    "\n",
+    "2. Select the size of the **training, cross-validation and testing sets**.\n",
+    "\n",
+    " - The **training set** contains the data used for the actual training.\n",
+    " - The **validation set** contains the data used to stop the training before over-fitting (over-learning). Listen to the explanations, it's too long to write here. For a fair decision, for validation we use data which is not used for actual training.\n",
+    " - The **testing set** contains the data used for the final testing of the final trained model. For a fair result, we use data which the network has never seen until now (neither in training nor for validation).\n",
+    " \n",
+    "  Default values for small datasets are around 70% / 15% / 15%. For larger datasets (tens of thousands of input vectors), we can use smaller percents for validation and testing.\n",
+    "\n",
+    "  These three sets of data are selected **randomly** from the overall available dataset, for fairness.\n",
+    "\n",
+    "3. Select the size of the **hidden layer**. This can be any value, but typically one chooses some value between the input size (large) and output size (small), so that the network has an overall decreasing size towards the output.\n",
+    "\n",
+    "  We can go with the default value (10), or perhaps make it 8 or 9. We can experiment with different values.\n",
+    "  \n",
+    "  We can put a vector here, e.g. [10 9 8], and we shall have **three hidden layers** instead of just one, therefore a much longer network.\n",
+    "\n",
+    "4.Train the network (press `Train` button), and when finished, investigate the results:\n",
+    "  - Number of epochs and final error value\n",
+    "  - Error plot\n",
+    "  - Confusion matrix\n",
+    "  - Receiver Operating Characteristic\n",
+    "\n",
+    "5. Go back and change the hidden layer size to 20, 50, then 5. Do the results change significantly?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's design a network in code:"
    ]
   },
   {
@@ -462,63 +372,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%======================\n",
-    "% To fill in\n",
-    "%======================\n",
+    "net = patternnet(10);      % Create a network with one hidden layer of size 10. Rest of the params remain with default values.\n",
+    "net = train(net,X',Yenc'); % Train the network with our data. The data should be arranged on rows.\n",
     "\n",
-    "W = randn(12, 1);           % initialize parameters randomly\n",
-    "\n",
-    "number_of_epochs = 1000;    % set number of iterations\n",
-    "\n",
-    "for iter = 1:number_of_epochs\n",
-    "    \n",
-    "    % Compute predictions:\n",
-    "    Y-pred = ...\n",
-    "    \n",
-    "    % Compute cost:\n",
-    "    J(iter) = 1/N * ...\n",
-    "    \n",
-    "    % Compute derivatives according to the given formula\n",
-    "    dW = ...\n",
-    "    \n",
-    "    % Update the weights\n",
-    "    mu = 0.0001;           % try multiple values here\n",
-    "    W = W - mu * dW;\n",
-    "    \n",
-    "    % Store the weights history\n",
-    "    W_hist(:,i) = W;\n",
-    "end\n",
-    "\n",
-    "% Plot the error and the evolution of the weights\n",
-    "plot(J)\n",
-    "figure\n",
-    "plot(W_hist)"
+    "view(net)                  % View the network architecture"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 3**: Compute the solution with the Matlab function `fitglm()`"
+    "FInally, do some predictions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%======================\n",
-    "% Your code here\n",
-    "%======================"
+    "result = net([put some input values here])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Serious example: handwritten digit classification on MNIST\n",
+    "\n",
+    "We follow the MNIST training tutorial from [https://www.mathworks.com/matlabcentral/fileexchange/73010-mnist-neural-network-training-and-testing](https://www.mathworks.com/matlabcentral/fileexchange/73010-mnist-neural-network-training-and-testing)\n",
+    "\n",
+    "Unzip the MNIST data. \n",
+    "\n",
+    "Load the data (this will create the matrix `mnist_train`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load mnist_train.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first column is the digit number. The remaining 748 columns contain the pixels in the linearized image (every image has 28x28 pixels).\n",
+    "Lookup the MNIST database on the Internet to see how the images look like.\n",
+    "\n",
+    "Let's prepare the inputs and outputs, like we did before. Check the sizes of the resulting arrays to understand what they contain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = mnist_train(:,2:end);\n",
+    "Y = mnist_train(:,1);\n",
+    "Yenc = full(ind2vec(1 + Y'))   % digits are 0 to 9, add 1 so that class indices are 1 to 10 (10 classes)\n",
+    "Yenc = Yenc';          % Transpose, so each value corresponds to a row, just like the input data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's design a shallow 2-layer network to classifiy the digits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygreatnetwork = patternnet([80, 60]);            % Use two hidden layers, with size 80 and 60\n",
+    "mygreatnetwork = train(mygreatnetwork, X',Yenc);  % Train the network with our data. The data should be arranged properly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training a real-life problem is not very fast :) Have patience until training is finished.\n",
+    "\n",
+    "You can look a the performance and confusion matrix updating live as training progresses.\n",
+    "\n",
+    "When training is finished:\n",
+    "  - Look at the error plot. Notice **overfitting**? This is what validation is good for.\n",
+    "  - Look at the confusion matrix. What is the classification accuracy (percentage of correctly classified images) on the testing set? \n",
+    "**Around 96%**. Excellent results!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the model to predict the digit from your own hand-drawing. \n",
+    "\n",
+    "Draw a digit similar to the ones in the dataset (this amounts to the **preprocessing** of the image):\n",
+    "  - Draw a letter using the mouse, in MS Paint\n",
+    "  - Make sure the digit is around the center of the image, has the same brush width compared to the image as the ones in the dataset\n",
+    "  - Save it as a grayscale image\n",
+    "  - Resize the image to 28x28 pixels\n",
+    "  - You should get an image similar to the ones in the dataset\n",
+    "  \n",
+    "Read the image in Matlab:\n",
+    "  - Use `imread()` to load the image\n",
+    "  - Convert to double with (`double()`)\n",
+    "  - Linearize the matrix in a row-major order (row by row), e.g.: `Ivec = I'(:)`\n",
+    "  \n",
+    "Identify (predict) the digit using the network:\n",
+    "```\n",
+    "mygreatnetwork(Ivec)\n",
+    "```\n",
+    "\n",
+    "Was the result correct?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Play with parameters\n",
+    "\n",
+    "Change the network architecture: use a single hidden layer, change the number of neurons, etc. Compare the results."
    ]
   },
   {
@@ -527,11 +510,9 @@
    "source": [
     "## 4. Final questions\n",
     "\n",
-    "1. In our example, the parameters $W$ keep updating forever, making the gray transition area smaller and smaller, but the actual frontier does not change much. Why does this happen? How can we prevent it?\n",
+    "1. How many parameters does the network used for MNIST classification have? \n",
     "\n",
-    "2. What happens if the two classes are **unbalanced** (many more inputs in one class compared to the other)?\n",
-    "\n",
-    "2. Suggest some good termination conditions for Gradient Descent (i.e. when should we stop the iterations)?"
+    "2. How many parameters would have a network used for classifying color images with 1024 x 768 resolution, into 10 output classes, using two hidden layers of size 2000 and 150?"
    ]
   }
  ],
