--- a/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.ipynb
+++ b/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.ipynb
@@ -42,19 +42,33 @@
     "\n",
     "### The SSD network architecture\n",
     "\n",
-    "![SSD architecture](img/gentle_guide_obj_det_ssd.jpg)\n",
+    "![SSD architecture](img/SSDArchitecture.jpg)\n",
     "\n",
-    "(image from [https://www.pyimagesearch.com/2018/05/14/a-gentle-guide-to-deep-learning-object-detection/](https://www.pyimagesearch.com/2018/05/14/a-gentle-guide-to-deep-learning-object-detection/)\n",
+    "(image from [https://towardsdatascience.com/understanding-ssd-multibox-real-time-object-detection-in-deep-learning-495ef744fab](https://towardsdatascience.com/understanding-ssd-multibox-real-time-object-detection-in-deep-learning-495ef744fab)\n",
     "\n",
     "The **input** of the network is a fixed-size $W \\times H \\times 3$ image tensor.\n",
     "\n",
     "The **outputs** of the network are the parameters for all $N$ detection boxes:\n",
-    "   - A matrix of $N \\times 4$ values with the predicted box displacements with respect to all the $N$ anchor boxes\n",
+    "   - A matrix of $N \\times 4$ values with the predicted box displacements/distortions with respect to all the $N$ anchor boxes (i.e. offset x, offset y, height scaling, width scaling).\n",
     "   - A matrix of $N \\times C$ with the predicted class scores for all the $N$ boxes. $C$ is the number of distinct classes in the dataset.\n",
     "   \n",
     "$N$ is the total number of predicted boxes over all the image. It can be very large, e.g. 8732 boxes for a $300 \\times 300$ image.\n",
     "\n",
-    "For a larger $1024 \\times 640$ image, the number can be much larger, over 90000 (speaking from experience). Of course, it depends on the parameters chosen by the designer."
+    "For a larger $1024 \\times 640$ image, the number can be much larger, over 90000 (speaking from experience). Of course, it depends on the parameters chosen by the designer.\n",
+    "\n",
+    "### Output encoding and decoding\n",
+    "\n",
+    "We have an image with one box around an object, done by a human (ground-truth). How do we tell the network what it should detect, in the training phase?\n",
+    "\n",
+    "**Output Encoding**: Before training, we must convert the ground-truth box into displacements with respect to the anchor boxes of the network. This is known as **encoding**: we convert the desired box in the native format of the models' output. During training, we show the image to the network, and we \"tell it\" to predict the correct displacements.\n",
+    "\n",
+    "![SSD Detection Boxes](img/SSDBox.png)\n",
+    "\n",
+    "(image from the SSD paper [https://arxiv.org/abs/1512.02325](https://arxiv.org/abs/1512.02325)\n",
+    "\n",
+    "**Output Decoding**: When the network runs, it outputs the predicted displacements with respect to the anchor boxes. Afterwards, from these displacements we compute the final object position (in pixels). This is known as **decoding** the results of the network, since we translate the native network output into our desired format (pixels). This is typically done outside the network itself.\n",
+    "\n",
+    "**Non-Max Suppression**: A single object is predicted by many anchor boxes. As a result, we will have many predicted boxes around one object in the image, with slightly different values. We want just one box. There is a procedure to select a single one out of them (the one with the highest confidence score), and ignore all the other opverlapping ones. This is known as Non-Max Suppression (NMS), since we keep only the box with the highest confidence, and we suppress all the other (non-max) overlapping boxes. An example is discussed in the exercises."
    ]
   },
   {
@@ -83,12 +97,12 @@
     "\n",
     "The model produces two kinds of data:\n",
     "\n",
-    " - box locations\n",
+    " - box locations (expressed as displacements/distortions with respect to the anchot boxes)\n",
     " - box classification scores\n",
     "\n",
     "The boxes are compared to the **real ground-truth** boxes available. For each ground-truth box, the best predicted box is selected (the predicted box with the correct class which overlaps the most with it), and the error is computed based on two terms:\n",
     "\n",
-    "  1. The **localization error**: typically, is the absolute difference between the coordinates of the ground-truth box and the predicted box.\n",
+    "  1. The **localization error**: typically, is the absolute difference between the coordinates or displacements of the ground-truth box and the predicted box.\n",
     "\n",
     "  2. The **classification error**, which compares the class scores of the predicted box with the true ground-truth class. The cross-entropy loss function is typically used, just like it is used for all other classification tasks. \n",
     "  \n",
