--- a/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
+++ b/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
@@ -153,7 +153,7 @@
     "$$\\nabla W = \\begin{bmatrix} \\frac{d J}{d w_1} & \\frac{d J}{d w_2} & ... & \\frac{d J}{d w_{k}}\\end{bmatrix}.$$\n",
     "\n",
     "In matrix form, the update rule can be written as:\n",
-    "$$W = W - \\mu \\nabla W$$.\n",
+    "$$W = W - \\mu \\nabla W.$$\n",
     "\n",
     "For linear regression with the quadratic cost function, it can be shown that the gradient is equal to:\n",
     "$$\\nabla W = X^* (\\hat{Y} - Y)$$"
@@ -340,6 +340,32 @@
     "plot(J)\n",
     "figure\n",
     "plot(W_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 5**: Repeat, with normalized input data\n",
+    "\n",
+    "In many machine learning tasks, it is better to normalize the input data. Normalization means, in this context, to make each column (each feature) zero-mean and unit-variance, by subtracting the mean and dividing to the standard deviation:\n",
+    "\n",
+    "$$x \\rightarrow \\frac{x - \\mu}{\\sigma},$$\n",
+    "\n",
+    "where $\\mu$ is the mean and $\\sigma$ is the standard deviation of every input column ($\\sigma^2$ is the variance).\n",
+    "\n",
+    "Do this preprocessing and repeat the training from above. You can use the Matlab function `normalize()` for this purpose. How are the results?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 6**: Create new features\n",
+    "\n",
+    "The linear model tries to estimate the output only as a linear combination of the inputs $x_i$. But what if the output depends, say, on the squared value $x_i^2$ of an input? The model cannot capture this. Instead, we can create new features manually, by performing transformations of the input data. \n",
+    "\n",
+    "Augment the existing dataset by appending, for every column $x_i$, new columns with the squared values $x_i^2$, and also all possible products $x_i \\cdot x_j$. Then repeat the training process on the augmented data. How are the results?"
    ]
   },
   {
