Update after Lab 01 2021-2022

--- a/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
+++ b/Labs/L1_LinearRegression/L1_LinearRegression.ipynb
@@ -114,6 +114,8 @@
     "\n",
     "This is not true anymore if we change the cost function.\n",
     "\n",
+    "The sign `*` signifies **transposition**. \n",
+    "\n",
     "#### 2. Matlab function doing the job for us\n",
     "\n",
     "Linear regression can be fitted in Matlab using the function `fitml()`:"
@@ -320,7 +322,7 @@
     "for iter = 1:number_of_epochs\n",
     "    \n",
     "    % Compute predictions:\n",
-    "    Y-pred = ...\n",
+    "    Ypred = ...\n",
     "    \n",
     "    % Compute cost:\n",
     "    J(iter) = 1/N * ...\n",
@@ -333,7 +335,7 @@
     "    W = W - mu * dW;\n",
     "    \n",
     "    % Store the weights history\n",
-    "    W_hist(:,i) = W;\n",
+    "    W_hist(:,iter) = W;\n",
     "end\n",
     "\n",
     "% Plot the error and the evolution of the weights\n",
