--- a/Labs/L4_ConvolutionalNeuralNetworks/L4_ConvolutionalNeuralNetworks.ipynb
+++ b/Labs/L4_ConvolutionalNeuralNetworks/L4_ConvolutionalNeuralNetworks.ipynb
@@ -194,14 +194,15 @@
     "\n",
     "1. Load the AlexNet model with pretrained weights on the ImageNet database. Open the model and examine the architecure.\n",
     "\n",
-    "  - How many parameters does the first convolutional layer have?\n",
-    "  - How many parameters does each trainable layer have? (trainable = convolutional or fully-connected)\n",
-    "  - What is the share of the fully-connected layers in the total number of parameters?\n",
-    "\n",
+    "   - How many parameters does the first convolutional layer have?\n",
+    "   - How many parameters does each trainable layer have? (trainable = convolutional or fully-connected)\n",
+    "   - What is the share of the fully-connected layers in the total number of parameters?\n",
     "\n",
     "2. Play with AlexNet. Download an image from the Internet and classify it. Does it work?\n",
     "\n",
-    "  The ImageNet class names can be found here: https://gist.github.com/yrevar/942d3a0ac09ec9e5eb3a\n",
+    "   The ImageNet class names can be found here: https://gist.github.com/yrevar/942d3a0ac09ec9e5eb3a\n",
+    "\n",
+    "3. For the used image, visualize the internal activations of the layers 'conv1', 'conv2', 'fc7' and 'prob' inside the network. What are their shape? Use the example here: https://www.mathworks.com/help/deeplearning/ug/visualize-activations-of-a-convolutional-neural-network.html\n",
     "  \n",
     "3. Perform **Transfer Learning** with AlexNet following the tutorial in here:  https://www.mathworks.com/help/deeplearning/ug/transfer-learning-using-alexnet.html\n",
     "\n",
@@ -209,13 +210,11 @@
     "\n",
     "  - Check out the available pretrained CNN models in Matlab: https://www.mathworks.com/help/deeplearning/ug/pretrained-convolutional-neural-networks.html\n",
     "  - Try one of the smaller, but more accurate ones: GoogLeNet, Resnet-18, Mobile-net v2\n",
-    "  \n",
-    "  \n",
+    "    \n",
     "5. Compare other networks (GoogLeNet, Resnet-18, Mobile-net v2) with AlexNet:\n",
     "\n",
     "  - do they have more or less layers?\n",
     "  - do they have smaller or bigger fully-connected layers a the end?\n",
-    "  \n",
     "\n",
     "6. Add one extra convolutional layer in the middle part of AlexNet. Train the network (warning: it may take a long long time)"
    ]
