--- a/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.qmd
+++ b/Labs/L5_ObjectDetectionWithSSD/L5_ObjectDetectionWithSSD.qmd
@@ -17,16 +17,16 @@ execute:
     
 ---
 
-# Objective
+## Objective
 
 Students should understand the principles of object detection with single-stage object detection networks,
 and be able use a pretrained object detection model available in Matlab (Yolo / SSD).
 
-# Theoretical aspects
+## Theoretical aspects
 
 Single Shot Detector (SSD) is a CNN network architecture designed for fast detection (e.g. localization) of objects in an image.
 
-## Object detection
+### Object detection
 
 Object detection = locating certain objects in an image, and indicate their class.
 
@@ -52,7 +52,7 @@ when predicting on a new image, the model returns a list of detected objects, ea
 
 There may be some variations, depending on the model architecture used. For example, the YOLO models provide an additional "objectness" score indicating the confidence that the box is an actual object, regardless of class.
 
-## The SSD network architecture
+### The SSD network architecture
 
 The SSD (Single-Shot Detector) model architecture is presented below[^SSD]:
 
@@ -73,7 +73,7 @@ $N$ is the total number of predicted boxes over all the image. It can be very la
 
 For a larger $1024 \times 640$ image, the number can be much larger, over 90000 (speaking from experience). Of course, it depends on the parameters chosen by the designer.
 
-## Output encoding and decoding
+### Output encoding and decoding
 
 We have an image with one box around an object, done by a human (ground-truth). How do we tell the network what it should detect, in the training phase?
 
@@ -85,7 +85,7 @@ We have an image with one box around an object, done by a human (ground-truth). 
 
 **Output Decoding**: When the network runs, it outputs the predicted displacements with respect to the anchor boxes. Afterwards, from these displacements we compute the final object position (in pixels). This is known as **decoding** the results of the network, since we translate the native network output into our desired format (pixels). This is typically done outside the network itself.
 
-## Non-Max Suppression
+### Non-Max Suppression
 
 ![Non-Max Suppression](img/Non-Maximal-Suppression.png)
 
@@ -95,15 +95,16 @@ A single object is predicted by many anchor boxes. As a result, we will have **m
 
 [^NMS]: image from [Incremental Training for Image Classification of Unseen Objects](https://www.researchgate.net/publication/345061606_Incremental_Training_for_Image_Classification_of_Unseen_Objects
 )
-## The model
+
+### The model
 
 The network model is defined by the sequence of convolutional layers in the architecture. Open the newtork in Matlab in order to inspect the architure in detail.
 
-## The model parameters
+### The model parameters
 
 The SSD model parameters are the parameters of all the convolutional the layers. There are no fully-connected layers in the SSD network, and neither in YOLO.
 
-## The cost function
+### The cost function
 
 The model produces two kinds of data:
 
@@ -118,7 +119,7 @@ When training, the predicted boxes are compared to the **real ground-truth** box
   
    Besides the predicted boxes which are compared to the ground-truth, there are many predicted boxes which corespond to **no** ground truth box. There are a few different methods how to treat these, some methods (e.g. Focal Loss) being better than others.
 
-## Training
+### Training
 
 Training is done with **backpropagation** and gradient descent (or some variant of it).
 
@@ -126,16 +127,100 @@ Training is done with **backpropagation** and gradient descent (or some variant 
 
 This is similar to all CNN networks.
 
-# Walkthrough 
+## Matlab tutorials walkthrough 
 
 Practical work is based on 3 Matlab examples:
+
+1. [Multiclass Object Detection Using YOLO v2 Deep Learning](https://www.mathworks.com/help/vision/ug/multiclass-object-detection-using-yolo-v2-deep-learning.html)
+
+2. Using the pretrained detectors available in [Mathworks Github](https://github.com/matlab-deep-learning/MATLAB-Deep-Learning-Model-Hub#object-detection-)
+   
+   - Use [EfficientDet](https://github.com/matlab-deep-learning/pretrained-efficientdet-d0)
+   - Download the zip file of the whole repository and unzip in Matlab Online
+   - Run the `efficientDetD0ObjectDetectionExample.m` file
+
+3. Change the thresholds in postprocess.m file
+
+Other tutorials:
 
 1. [Getting Started with SSD Multibox Detection](https://www.mathworks.com/help/vision/ug/getting-started-with-ssd.html)
 2. [Anchor Boxes for Object Detection](https://www.mathworks.com/help/vision/ug/anchor-boxes-for-object-detection.html)
 3. [Object Detection Using SSD Deep Learning](https://www.mathworks.com/help/vision/ug/object-detection-using-single-shot-detector.html)
 4. [Object Detection Using YOLO v4 Deep Learning](https://www.mathworks.com/help/vision/ug/object-detection-using-yolov4-deep-learning.html)
 
-# Practical work
+
+## Practical work
+
+### Exercise 1 - Run on another image
+
+- Run the EffecientDet object detector on the image `Richarlison.jpg`, and identify how many objects are detected, and their class.
+- Set the overlap threshold to 0.01 and run it on the `Richarlison.jpg` image. What happens?
+- Set the overlap threshold to 0.9 and the score threshold to 0.2, and run it on the `Richarlison.jpg` image. What happens?
+- Set a breakpoint on line 34 of the `postprocess.m` file and investigate the size of the `scores` vector. What is its size? What does this number represent?
+
+### Exercise 2 - Aspect ratio
+
+- Run the EfficientDet object detector on the image `CarWide.jpg`. Is the car detected? If yes, with what score?
+- Identify the input resolution of the EfficientDet network.
+- Use the Matlab function `imresize()` to resize the image `CarWide.jpg` to the input resolution, and display it with `imshow()`.
+
+  What happens with the car image? This is the image which goes into the object detector network. Do you thinks this a problem?
+
+- Use any Windows tool to crop from the `CarWide.jpg` a square part containing the car, save it, and run the object detector on it. 
+
+  Does the detection score improve?
+
+### Exercise 3 - Partial objects
+
+- Use any Windows tool to crop from the `CarWide.jpg` a square part containing
+
+  - about 3/4 of the car
+  - about 1/2 of the car
+  - about 1/4 of the car
+  
+- Save each image and run the object detector on each of them.  What is the detection score?
+
+### Exercise 4 - YoloX
+
+- Go to the YoloX object detector from here: https://github.com/matlab-deep-learning/Pretrained-YOLOX-Network-For-Object-Detection
+- Using the Github example, run this detector on the same image `Richarlison.jpg`
+- Filter the bounding box on the image:
+  - Display only the objects with the highest score
+  - Display only the object whose center (the center of the box) is the left-most among all objects
+  - Display only the non-person objects
+  
+- Identify the two threshold values in the `postprocess.m` function, the score threshold and the overlap threshold.
+- Set both thresholds to 0.03 and display the results. How many objects are detected now?
+- Set the score threshold to 0.1 and the overlap threshold to 0.8. How many objects are detected now?
+- What is the total number of boxes predicted by the YoloX model?
+
+
+### Exercise 5 - Non-max suppression
+
+Write a small Matlab function called `IOU` which computes the intersection-over-union of two bounding boxes, 
+given as vectors `[left, right, bottom, top]`.
+
+Use the `rectint()` function to compute the intersection of the boxes.
+
+```matlab
+function result = IOU(box1, box2)
+
+% Compute IOU of two boxes
+% Each box is a 4-element vector: [left, right, bottom, top]
+
+...
+
+end
+```
+
+Use the function to compute the IOU of the following two bounding boxes:
+
+```matlab
+A = [50, 100, 120, 200];
+B = [10, 80, 40, 140];
+```
+
+### Exercise 6 - SSD
 
 1. Run the first steps of the [Object Detection Using SSD Deep Learning](https://www.mathworks.com/help/vision/ug/object-detection-using-single-shot-detector.html) tutorial, 
    and stop before the creation of the SSD network.
@@ -147,19 +232,19 @@ Practical work is based on 3 Matlab examples:
    - Which are the two output layers?
    - How many boxes are predicted in all?
 
-4. Run the next steps of the tutorial, and observer the detected boxes on the image.
+3. Run the next steps of the tutorial, and observer the detected boxes on the image.
 
-5. Download a similar image from the Internet and run the model on it. Are the objects detected well?
+4. Download a similar image from the Internet and run the model on it. Are the objects detected well?
 
-6. Locate the call to the `detect()` function and change the detection threshold to 0.01. What happens?
+5. Locate the call to the `detect()` function and change the detection threshold to 0.01. What happens?
 
    - What happens if the threshold is set too low?
    - What would happen if the threshold is set too high?
    - What is the trade-off involved in choosing a value for the threshold?
 
-7. Set the detection parameter 'SelectStrongest' to `false`: `detect(... 'SelectStrongest', false)`. Set the threshold to 0.001. What changes? How many detected boxes are now?
+6. Set the detection parameter 'SelectStrongest' to `false`: `detect(... 'SelectStrongest', false)`. Set the threshold to 0.001. What changes? How many detected boxes are now?
 
-8. Set the detection parameter 'SelectStrongest' to `false`: `detect(... 'SelectStrongest', false)`. Reset the threshold to a reasonable value (e.g. 0.4). What changes? How many detected boxes are now?
+7. Set the detection parameter 'SelectStrongest' to `false`: `detect(... 'SelectStrongest', false)`. Reset the threshold to a reasonable value (e.g. 0.4). What changes? How many detected boxes are now?
 
    - Why do we have multiple boxes around a single object?
    - Imagine a procedure to keep only a single detection box around an object (this is known as **Non-Max Suppresion (NMS)**)
@@ -167,7 +252,7 @@ Practical work is based on 3 Matlab examples:
 
 9. Set the variable `doTraining` to `true` (or 1) and train the model. How fast does it work?
 
-# Final questions
+## Final questions
 
 TBD
 
